phaseD/parser.output
Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmts stmt
    3      | %empty

    4 stmt: expr SEMICOLON
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | BREAK SEMICOLON
   10     | CONTINUE SEMICOLON
   11     | block
   12     | funcdef
   13     | SEMICOLON

   14 expr: assignexpr
   15     | expr PLUS expr
   16     | expr MINUS expr
   17     | expr STAR expr
   18     | expr SLASH expr
   19     | expr MOD expr
   20     | expr GREATER expr
   21     | expr GREATER_OR_EQUAL expr
   22     | expr LESSER expr
   23     | expr LESSER_OR_EQUAL expr
   24     | expr EQUAL expr
   25     | expr UNEQUAL expr
   26     | expr AND expr
   27     | expr OR expr
   28     | term

   29 term: PARENTHESES_OPEN expr PARENTHESES_CLOSE
   30     | MINUS expr
   31     | NOT expr
   32     | PLUS_PLUS lvalue
   33     | lvalue PLUS_PLUS
   34     | MINUS_MINUS lvalue
   35     | lvalue MINUS_MINUS
   36     | primary

   37 assignexpr: lvalue ASSIGN expr

   38 primary: lvalue
   39        | call
   40        | objectdef
   41        | PARENTHESES_OPEN funcdef PARENTHESES_CLOSE
   42        | const

   43 lvalue: ID
   44       | LOCAL ID
   45       | SCOPE ID
   46       | member

   47 tableitem: lvalue DOT ID
   48          | lvalue BRACKET_OPEN expr BRACKET_CLOSE

   49 member: tableitem
   50       | call DOT ID
   51       | call BRACKET_OPEN expr BRACKET_CLOSE

   52 call: call PARENTHESES_OPEN elist PARENTHESES_CLOSE
   53     | lvalue callsuffix
   54     | PARENTHESES_OPEN funcdef PARENTHESES_CLOSE PARENTHESES_OPEN elist PARENTHESES_CLOSE

   55 callsuffix: normcall
   56           | methodcall

   57 normcall: PARENTHESES_OPEN elist PARENTHESES_CLOSE

   58 methodcall: DOT_DOT ID PARENTHESES_OPEN elist PARENTHESES_CLOSE

   59 tablemake: BRACKET_OPEN elist BRACKET_CLOSE
   60          | BRACKET_OPEN indexed BRACKET_CLOSE

   61 objectdef: tablemake

   62 elist: elist_plus
   63      | %empty

   64 elist_plus: expr
   65           | elist_plus COMMA expr

   66 indexed: indexedelem
   67        | indexed COMMA indexedelem

   68 indexedelem: BLOCK_START expr COLON expr BLOCK_END

   69 $@1: %empty

   70 block: BLOCK_START $@1 stmts BLOCK_END

   71 funcblockstart: %empty

   72 funcblockend: %empty

   73 funcname: ID
   74         | %empty

   75 funcprefix: FUNCTION funcname funcblockstart

   76 $@2: %empty

   77 $@3: %empty

   78 funcargs: PARENTHESES_OPEN $@2 idlist $@3 PARENTHESES_CLOSE

   79 funcbody: block funcblockend

   80 funcdef: funcprefix funcargs funcbody

   81 const: INTEGER
   82      | REAL
   83      | STRING_LITERAL
   84      | NIL
   85      | IS_TRUE
   86      | IS_FALSE

   87 idlist: idlist_plus
   88       | %empty

   89 idlist_plus: ID
   90            | idlist_plus COMMA ID

   91 ifprefix: IF PARENTHESES_OPEN expr PARENTHESES_CLOSE

   92 elseprefix: ELSE

   93 ifstmt: ifprefix stmt elseprefix stmt
   94       | ifprefix stmt

   95 loopstart: %empty

   96 loopend: %empty

   97 loopstmt: loopstart stmt loopend

   98 whilestart: WHILE

   99 whilecond: PARENTHESES_OPEN expr PARENTHESES_CLOSE

  100 whilestmt: whilestart whilecond loopstmt

  101 N: %empty

  102 M: %empty

  103 forprefix: FOR PARENTHESES_OPEN elist SEMICOLON M expr SEMICOLON

  104 forstmt: forprefix N elist PARENTHESES_CLOSE N loopstmt N

  105 returnstmt: RETURN expr SEMICOLON
  106           | RETURN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 43 44 45 47 50 58 73 89 90
STRING_LITERAL (259) 83
INTEGER (260) 81
REAL (261) 82
IF (262) 91
ELSE (263) 92
WHILE (264) 98
FOR (265) 103
FUNCTION (266) 75
RETURN (267) 105 106
BREAK (268) 9
CONTINUE (269) 10
AND (270) 26
NOT (271) 31
OR (272) 27
LOCAL (273) 44
IS_TRUE (274) 85
IS_FALSE (275) 86
NIL (276) 84
ASSIGN (277) 37
PLUS (278) 15
MINUS (279) 16 30
STAR (280) 17
SLASH (281) 18
MOD (282) 19
EQUAL (283) 24
UNEQUAL (284) 25
PLUS_PLUS (285) 32 33
MINUS_MINUS (286) 34 35
GREATER (287) 20
LESSER (288) 22
GREATER_OR_EQUAL (289) 21
LESSER_OR_EQUAL (290) 23
BLOCK_START (291) 68 70
BLOCK_END (292) 68 70
BRACKET_OPEN (293) 48 51 59 60
BRACKET_CLOSE (294) 48 51 59 60
PARENTHESES_OPEN (295) 29 41 52 54 57 58 78 91 99 103
PARENTHESES_CLOSE (296) 29 41 52 54 57 58 78 91 99 104
SEMICOLON (297) 4 9 10 13 103 105 106
COMMA (298) 65 67 90
COLON (299) 68
SCOPE (300) 45
DOT (301) 47 50
DOT_DOT (302) 58
UNARY_MINUS (303)
THEN (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
stmts (52)
    on left: 2 3, on right: 1 2 70
stmt (53)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2 93 94 97
expr (54)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    4 15 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 37 48 51 64 65
    68 91 99 103 105
term (55)
    on left: 29 30 31 32 33 34 35 36, on right: 28
assignexpr (56)
    on left: 37, on right: 14
primary (57)
    on left: 38 39 40 41 42, on right: 36
lvalue (58)
    on left: 43 44 45 46, on right: 32 33 34 35 37 38 47 48 53
tableitem (59)
    on left: 47 48, on right: 49
member (60)
    on left: 49 50 51, on right: 46
call (61)
    on left: 52 53 54, on right: 39 50 51 52
callsuffix (62)
    on left: 55 56, on right: 53
normcall (63)
    on left: 57, on right: 55
methodcall (64)
    on left: 58, on right: 56
tablemake (65)
    on left: 59 60, on right: 61
objectdef (66)
    on left: 61, on right: 40
elist (67)
    on left: 62 63, on right: 52 54 57 58 59 103 104
elist_plus (68)
    on left: 64 65, on right: 62 65
indexed (69)
    on left: 66 67, on right: 60 67
indexedelem (70)
    on left: 68, on right: 66 67
block (71)
    on left: 70, on right: 11 79
$@1 (72)
    on left: 69, on right: 70
funcblockstart (73)
    on left: 71, on right: 75
funcblockend (74)
    on left: 72, on right: 79
funcname (75)
    on left: 73 74, on right: 75
funcprefix (76)
    on left: 75, on right: 80
funcargs (77)
    on left: 78, on right: 80
$@2 (78)
    on left: 76, on right: 78
$@3 (79)
    on left: 77, on right: 78
funcbody (80)
    on left: 79, on right: 80
funcdef (81)
    on left: 80, on right: 12 41 54
const (82)
    on left: 81 82 83 84 85 86, on right: 42
idlist (83)
    on left: 87 88, on right: 78
idlist_plus (84)
    on left: 89 90, on right: 87 90
ifprefix (85)
    on left: 91, on right: 93 94
elseprefix (86)
    on left: 92, on right: 93
ifstmt (87)
    on left: 93 94, on right: 5
loopstart (88)
    on left: 95, on right: 97
loopend (89)
    on left: 96, on right: 97
loopstmt (90)
    on left: 97, on right: 100 104
whilestart (91)
    on left: 98, on right: 100
whilecond (92)
    on left: 99, on right: 100
whilestmt (93)
    on left: 100, on right: 6
N (94)
    on left: 101, on right: 104
M (95)
    on left: 102, on right: 103
forprefix (96)
    on left: 103, on right: 104
forstmt (97)
    on left: 104, on right: 7
returnstmt (98)
    on left: 105 106, on right: 8


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (stmts)

    program  go to state 1
    stmts    go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmts .
    2 stmts: stmts . stmt

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    IF                shift, and go to state 8
    WHILE             shift, and go to state 9
    FOR               shift, and go to state 10
    FUNCTION          shift, and go to state 11
    RETURN            shift, and go to state 12
    BREAK             shift, and go to state 13
    CONTINUE          shift, and go to state 14
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BLOCK_START       shift, and go to state 23
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SEMICOLON         shift, and go to state 26
    SCOPE             shift, and go to state 27

    $default  reduce using rule 1 (program)

    stmt        go to state 28
    expr        go to state 29
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    tableitem   go to state 34
    member      go to state 35
    call        go to state 36
    tablemake   go to state 37
    objectdef   go to state 38
    block       go to state 39
    funcprefix  go to state 40
    funcdef     go to state 41
    const       go to state 42
    ifprefix    go to state 43
    ifstmt      go to state 44
    whilestart  go to state 45
    whilestmt   go to state 46
    forprefix   go to state 47
    forstmt     go to state 48
    returnstmt  go to state 49


State 3

    0 $accept: program $end .

    $default  accept


State 4

   43 lvalue: ID .

    $default  reduce using rule 43 (lvalue)


State 5

   83 const: STRING_LITERAL .

    $default  reduce using rule 83 (const)


State 6

   81 const: INTEGER .

    $default  reduce using rule 81 (const)


State 7

   82 const: REAL .

    $default  reduce using rule 82 (const)


State 8

   91 ifprefix: IF . PARENTHESES_OPEN expr PARENTHESES_CLOSE

    PARENTHESES_OPEN  shift, and go to state 50


State 9

   98 whilestart: WHILE .

    $default  reduce using rule 98 (whilestart)


State 10

  103 forprefix: FOR . PARENTHESES_OPEN elist SEMICOLON M expr SEMICOLON

    PARENTHESES_OPEN  shift, and go to state 51


State 11

   75 funcprefix: FUNCTION . funcname funcblockstart

    ID  shift, and go to state 52

    $default  reduce using rule 74 (funcname)

    funcname  go to state 53


State 12

  105 returnstmt: RETURN . expr SEMICOLON
  106           | RETURN . SEMICOLON

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SEMICOLON         shift, and go to state 54
    SCOPE             shift, and go to state 27

    expr        go to state 55
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    tableitem   go to state 34
    member      go to state 35
    call        go to state 36
    tablemake   go to state 37
    objectdef   go to state 38
    const       go to state 42


State 13

    9 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 14

   10 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 15

   31 term: NOT . expr

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    expr        go to state 58
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    tableitem   go to state 34
    member      go to state 35
    call        go to state 36
    tablemake   go to state 37
    objectdef   go to state 38
    const       go to state 42


State 16

   44 lvalue: LOCAL . ID

    ID  shift, and go to state 59


State 17

   85 const: IS_TRUE .

    $default  reduce using rule 85 (const)


State 18

   86 const: IS_FALSE .

    $default  reduce using rule 86 (const)


State 19

   84 const: NIL .

    $default  reduce using rule 84 (const)


State 20

   30 term: MINUS . expr

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    expr        go to state 60
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    tableitem   go to state 34
    member      go to state 35
    call        go to state 36
    tablemake   go to state 37
    objectdef   go to state 38
    const       go to state 42


State 21

   32 term: PLUS_PLUS . lvalue

    ID                shift, and go to state 4
    LOCAL             shift, and go to state 16
    PARENTHESES_OPEN  shift, and go to state 61
    SCOPE             shift, and go to state 27

    lvalue     go to state 62
    tableitem  go to state 34
    member     go to state 35
    call       go to state 63


State 22

   34 term: MINUS_MINUS . lvalue

    ID                shift, and go to state 4
    LOCAL             shift, and go to state 16
    PARENTHESES_OPEN  shift, and go to state 61
    SCOPE             shift, and go to state 27

    lvalue     go to state 64
    tableitem  go to state 34
    member     go to state 35
    call       go to state 63


State 23

   70 block: BLOCK_START . $@1 stmts BLOCK_END

    $default  reduce using rule 69 ($@1)

    $@1  go to state 65


State 24

   59 tablemake: BRACKET_OPEN . elist BRACKET_CLOSE
   60          | BRACKET_OPEN . indexed BRACKET_CLOSE

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BLOCK_START       shift, and go to state 66
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    $default  reduce using rule 63 (elist)

    expr         go to state 67
    term         go to state 30
    assignexpr   go to state 31
    primary      go to state 32
    lvalue       go to state 33
    tableitem    go to state 34
    member       go to state 35
    call         go to state 36
    tablemake    go to state 37
    objectdef    go to state 38
    elist        go to state 68
    elist_plus   go to state 69
    indexed      go to state 70
    indexedelem  go to state 71
    const        go to state 42


State 25

   29 term: PARENTHESES_OPEN . expr PARENTHESES_CLOSE
   41 primary: PARENTHESES_OPEN . funcdef PARENTHESES_CLOSE
   54 call: PARENTHESES_OPEN . funcdef PARENTHESES_CLOSE PARENTHESES_OPEN elist PARENTHESES_CLOSE

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    FUNCTION          shift, and go to state 11
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    expr        go to state 72
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    tableitem   go to state 34
    member      go to state 35
    call        go to state 36
    tablemake   go to state 37
    objectdef   go to state 38
    funcprefix  go to state 40
    funcdef     go to state 73
    const       go to state 42


State 26

   13 stmt: SEMICOLON .

    $default  reduce using rule 13 (stmt)


State 27

   45 lvalue: SCOPE . ID

    ID  shift, and go to state 74


State 28

    2 stmts: stmts stmt .

    $default  reduce using rule 2 (stmts)


State 29

    4 stmt: expr . SEMICOLON
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . MOD expr
   20     | expr . GREATER expr
   21     | expr . GREATER_OR_EQUAL expr
   22     | expr . LESSER expr
   23     | expr . LESSER_OR_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . UNEQUAL expr
   26     | expr . AND expr
   27     | expr . OR expr

    AND               shift, and go to state 75
    OR                shift, and go to state 76
    PLUS              shift, and go to state 77
    MINUS             shift, and go to state 78
    STAR              shift, and go to state 79
    SLASH             shift, and go to state 80
    MOD               shift, and go to state 81
    EQUAL             shift, and go to state 82
    UNEQUAL           shift, and go to state 83
    GREATER           shift, and go to state 84
    LESSER            shift, and go to state 85
    GREATER_OR_EQUAL  shift, and go to state 86
    LESSER_OR_EQUAL   shift, and go to state 87
    SEMICOLON         shift, and go to state 88


State 30

   28 expr: term .

    $default  reduce using rule 28 (expr)


State 31

   14 expr: assignexpr .

    $default  reduce using rule 14 (expr)


State 32

   36 term: primary .

    $default  reduce using rule 36 (term)


State 33

   33 term: lvalue . PLUS_PLUS
   35     | lvalue . MINUS_MINUS
   37 assignexpr: lvalue . ASSIGN expr
   38 primary: lvalue .
   47 tableitem: lvalue . DOT ID
   48          | lvalue . BRACKET_OPEN expr BRACKET_CLOSE
   53 call: lvalue . callsuffix

    ASSIGN            shift, and go to state 89
    PLUS_PLUS         shift, and go to state 90
    MINUS_MINUS       shift, and go to state 91
    BRACKET_OPEN      shift, and go to state 92
    PARENTHESES_OPEN  shift, and go to state 93
    DOT               shift, and go to state 94
    DOT_DOT           shift, and go to state 95

    $default  reduce using rule 38 (primary)

    callsuffix  go to state 96
    normcall    go to state 97
    methodcall  go to state 98


State 34

   49 member: tableitem .

    $default  reduce using rule 49 (member)


State 35

   46 lvalue: member .

    $default  reduce using rule 46 (lvalue)


State 36

   39 primary: call .
   50 member: call . DOT ID
   51       | call . BRACKET_OPEN expr BRACKET_CLOSE
   52 call: call . PARENTHESES_OPEN elist PARENTHESES_CLOSE

    BRACKET_OPEN      shift, and go to state 99
    PARENTHESES_OPEN  shift, and go to state 100
    DOT               shift, and go to state 101

    $default  reduce using rule 39 (primary)


State 37

   61 objectdef: tablemake .

    $default  reduce using rule 61 (objectdef)


State 38

   40 primary: objectdef .

    $default  reduce using rule 40 (primary)


State 39

   11 stmt: block .

    $default  reduce using rule 11 (stmt)


State 40

   80 funcdef: funcprefix . funcargs funcbody

    PARENTHESES_OPEN  shift, and go to state 102

    funcargs  go to state 103


State 41

   12 stmt: funcdef .

    $default  reduce using rule 12 (stmt)


State 42

   42 primary: const .

    $default  reduce using rule 42 (primary)


State 43

   93 ifstmt: ifprefix . stmt elseprefix stmt
   94       | ifprefix . stmt

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    IF                shift, and go to state 8
    WHILE             shift, and go to state 9
    FOR               shift, and go to state 10
    FUNCTION          shift, and go to state 11
    RETURN            shift, and go to state 12
    BREAK             shift, and go to state 13
    CONTINUE          shift, and go to state 14
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BLOCK_START       shift, and go to state 23
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SEMICOLON         shift, and go to state 26
    SCOPE             shift, and go to state 27

    stmt        go to state 104
    expr        go to state 29
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    tableitem   go to state 34
    member      go to state 35
    call        go to state 36
    tablemake   go to state 37
    objectdef   go to state 38
    block       go to state 39
    funcprefix  go to state 40
    funcdef     go to state 41
    const       go to state 42
    ifprefix    go to state 43
    ifstmt      go to state 44
    whilestart  go to state 45
    whilestmt   go to state 46
    forprefix   go to state 47
    forstmt     go to state 48
    returnstmt  go to state 49


State 44

    5 stmt: ifstmt .

    $default  reduce using rule 5 (stmt)


State 45

  100 whilestmt: whilestart . whilecond loopstmt

    PARENTHESES_OPEN  shift, and go to state 105

    whilecond  go to state 106


State 46

    6 stmt: whilestmt .

    $default  reduce using rule 6 (stmt)


State 47

  104 forstmt: forprefix . N elist PARENTHESES_CLOSE N loopstmt N

    $default  reduce using rule 101 (N)

    N  go to state 107


State 48

    7 stmt: forstmt .

    $default  reduce using rule 7 (stmt)


State 49

    8 stmt: returnstmt .

    $default  reduce using rule 8 (stmt)


State 50

   91 ifprefix: IF PARENTHESES_OPEN . expr PARENTHESES_CLOSE

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    expr        go to state 108
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    tableitem   go to state 34
    member      go to state 35
    call        go to state 36
    tablemake   go to state 37
    objectdef   go to state 38
    const       go to state 42


State 51

  103 forprefix: FOR PARENTHESES_OPEN . elist SEMICOLON M expr SEMICOLON

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    $default  reduce using rule 63 (elist)

    expr        go to state 67
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    tableitem   go to state 34
    member      go to state 35
    call        go to state 36
    tablemake   go to state 37
    objectdef   go to state 38
    elist       go to state 109
    elist_plus  go to state 69
    const       go to state 42


State 52

   73 funcname: ID .

    $default  reduce using rule 73 (funcname)


State 53

   75 funcprefix: FUNCTION funcname . funcblockstart

    $default  reduce using rule 71 (funcblockstart)

    funcblockstart  go to state 110


State 54

  106 returnstmt: RETURN SEMICOLON .

    $default  reduce using rule 106 (returnstmt)


State 55

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . MOD expr
   20     | expr . GREATER expr
   21     | expr . GREATER_OR_EQUAL expr
   22     | expr . LESSER expr
   23     | expr . LESSER_OR_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . UNEQUAL expr
   26     | expr . AND expr
   27     | expr . OR expr
  105 returnstmt: RETURN expr . SEMICOLON

    AND               shift, and go to state 75
    OR                shift, and go to state 76
    PLUS              shift, and go to state 77
    MINUS             shift, and go to state 78
    STAR              shift, and go to state 79
    SLASH             shift, and go to state 80
    MOD               shift, and go to state 81
    EQUAL             shift, and go to state 82
    UNEQUAL           shift, and go to state 83
    GREATER           shift, and go to state 84
    LESSER            shift, and go to state 85
    GREATER_OR_EQUAL  shift, and go to state 86
    LESSER_OR_EQUAL   shift, and go to state 87
    SEMICOLON         shift, and go to state 111


State 56

    9 stmt: BREAK SEMICOLON .

    $default  reduce using rule 9 (stmt)


State 57

   10 stmt: CONTINUE SEMICOLON .

    $default  reduce using rule 10 (stmt)


State 58

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . MOD expr
   20     | expr . GREATER expr
   21     | expr . GREATER_OR_EQUAL expr
   22     | expr . LESSER expr
   23     | expr . LESSER_OR_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . UNEQUAL expr
   26     | expr . AND expr
   27     | expr . OR expr
   31 term: NOT expr .

    $default  reduce using rule 31 (term)


State 59

   44 lvalue: LOCAL ID .

    $default  reduce using rule 44 (lvalue)


State 60

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . MOD expr
   20     | expr . GREATER expr
   21     | expr . GREATER_OR_EQUAL expr
   22     | expr . LESSER expr
   23     | expr . LESSER_OR_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . UNEQUAL expr
   26     | expr . AND expr
   27     | expr . OR expr
   30 term: MINUS expr .

    $default  reduce using rule 30 (term)


State 61

   54 call: PARENTHESES_OPEN . funcdef PARENTHESES_CLOSE PARENTHESES_OPEN elist PARENTHESES_CLOSE

    FUNCTION  shift, and go to state 11

    funcprefix  go to state 40
    funcdef     go to state 112


State 62

   32 term: PLUS_PLUS lvalue .
   47 tableitem: lvalue . DOT ID
   48          | lvalue . BRACKET_OPEN expr BRACKET_CLOSE
   53 call: lvalue . callsuffix

    BRACKET_OPEN      shift, and go to state 92
    PARENTHESES_OPEN  shift, and go to state 93
    DOT               shift, and go to state 94
    DOT_DOT           shift, and go to state 95

    $default  reduce using rule 32 (term)

    callsuffix  go to state 96
    normcall    go to state 97
    methodcall  go to state 98


State 63

   50 member: call . DOT ID
   51       | call . BRACKET_OPEN expr BRACKET_CLOSE
   52 call: call . PARENTHESES_OPEN elist PARENTHESES_CLOSE

    BRACKET_OPEN      shift, and go to state 99
    PARENTHESES_OPEN  shift, and go to state 100
    DOT               shift, and go to state 101


State 64

   34 term: MINUS_MINUS lvalue .
   47 tableitem: lvalue . DOT ID
   48          | lvalue . BRACKET_OPEN expr BRACKET_CLOSE
   53 call: lvalue . callsuffix

    BRACKET_OPEN      shift, and go to state 92
    PARENTHESES_OPEN  shift, and go to state 93
    DOT               shift, and go to state 94
    DOT_DOT           shift, and go to state 95

    $default  reduce using rule 34 (term)

    callsuffix  go to state 96
    normcall    go to state 97
    methodcall  go to state 98


State 65

   70 block: BLOCK_START $@1 . stmts BLOCK_END

    $default  reduce using rule 3 (stmts)

    stmts  go to state 113


State 66

   68 indexedelem: BLOCK_START . expr COLON expr BLOCK_END

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    expr        go to state 114
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    tableitem   go to state 34
    member      go to state 35
    call        go to state 36
    tablemake   go to state 37
    objectdef   go to state 38
    const       go to state 42


State 67

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . MOD expr
   20     | expr . GREATER expr
   21     | expr . GREATER_OR_EQUAL expr
   22     | expr . LESSER expr
   23     | expr . LESSER_OR_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . UNEQUAL expr
   26     | expr . AND expr
   27     | expr . OR expr
   64 elist_plus: expr .

    AND               shift, and go to state 75
    OR                shift, and go to state 76
    PLUS              shift, and go to state 77
    MINUS             shift, and go to state 78
    STAR              shift, and go to state 79
    SLASH             shift, and go to state 80
    MOD               shift, and go to state 81
    EQUAL             shift, and go to state 82
    UNEQUAL           shift, and go to state 83
    GREATER           shift, and go to state 84
    LESSER            shift, and go to state 85
    GREATER_OR_EQUAL  shift, and go to state 86
    LESSER_OR_EQUAL   shift, and go to state 87

    $default  reduce using rule 64 (elist_plus)


State 68

   59 tablemake: BRACKET_OPEN elist . BRACKET_CLOSE

    BRACKET_CLOSE  shift, and go to state 115


State 69

   62 elist: elist_plus .
   65 elist_plus: elist_plus . COMMA expr

    COMMA  shift, and go to state 116

    $default  reduce using rule 62 (elist)


State 70

   60 tablemake: BRACKET_OPEN indexed . BRACKET_CLOSE
   67 indexed: indexed . COMMA indexedelem

    BRACKET_CLOSE  shift, and go to state 117
    COMMA          shift, and go to state 118


State 71

   66 indexed: indexedelem .

    $default  reduce using rule 66 (indexed)


State 72

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . MOD expr
   20     | expr . GREATER expr
   21     | expr . GREATER_OR_EQUAL expr
   22     | expr . LESSER expr
   23     | expr . LESSER_OR_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . UNEQUAL expr
   26     | expr . AND expr
   27     | expr . OR expr
   29 term: PARENTHESES_OPEN expr . PARENTHESES_CLOSE
